# yacreader

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .hgignore  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  CMakeLists.txt  DSA gold mine problem.cpp  DSA gold mine problem.py  Flatten_a_Linked_List.cpp  INSTALL.md  INSTALL.txt  Qt5-DROP.md  README.md  README.txt  WINDOWS_LONG_PATH_SUPPORT_PLAN.md  YACReader.1  YACReader.desktop  YACReader.pro  YACReaderLibrary.1  YACReaderLibrary.desktop  appveyor.yml  azure-pipelines-build-number.yml  azure-pipelines-windows-template-qt6-arm64.yml  azure-pipelines-windows-template-qt6.yml  azure-pipelines-windows-template.yml  azure-pipelines.yml  cleanOSX.sh  com.yacreader.YACReader.appdata.xml  com.yacreader.YACReader.yml  compileOSX.sh  compileX11.sh  config.pri  dmg.json  generateVS2010Projects.bat  gold_mine_problem.cpp  (+4 more)
YACReader/: CMakeLists.txt  Info.plist  Info.plist.mac  YACReader.icns  YACReader.pri  YACReader.pro  bookmarks.cpp  bookmarks.h  bookmarks_dialog.cpp  bookmarks_dialog.h  comic.cpp  comic.h  configuration.cpp  configuration.h  continuous_page_provider.cpp  continuous_page_provider.h  continuous_page_widget.cpp  continuous_page_widget.h  continuous_view_model.cpp  continuous_view_model.h  files.qrc  goto_dialog.cpp  goto_dialog.h  goto_flow.cpp  goto_flow.h  goto_flow_decorationbar.cpp  goto_flow_decorationbar.h  goto_flow_gl.cpp  goto_flow_gl.h  goto_flow_toolbar.cpp  goto_flow_toolbar.h  goto_flow_widget.cpp  goto_flow_widget.h  images.qrc  images_osx.qrc  magnifying_glass.cpp  magnifying_glass.h  main.cpp  main_window_viewer.cpp  main_window_viewer.h  (+43 more)
YACReader/themes/: builtin_classic.json  builtin_dark.json  builtin_dark1.json  builtin_dark2.json  builtin_dark3.json  builtin_dark4.json  builtin_light.json  builtin_light1.json  builtin_light2.json  builtin_light3.json  builtin_light4.json  builtin_light5.json  theme.h  theme_factory.cpp  theme_factory.h  themes.pri
YACReaderLibrary/: CMakeLists.txt  Info.plist  YACReaderLibrary.icns  YACReaderLibrary.pro  YACReaderLibraryServer.pro  add_label_dialog.cpp  add_label_dialog.h  add_library_dialog.cpp  add_library_dialog.h  bundle_creator.cpp  bundle_creator.h  classic_comics_view.cpp  classic_comics_view.h  comic_files_manager.cpp  comic_files_manager.h  comic_flow.cpp  comic_flow.h  comic_flow_widget.cpp  comic_flow_widget.h  comic_info_repairer.cpp  comic_info_repairer.h  comic_vine_client.cpp  comic_vine_client.h  comic_vine_dialog.cpp  comic_vine_dialog.h  comics_remover.cpp  comics_remover.h  comics_view.cpp  comics_view.h  comics_view_transition.cpp  comics_view_transition.h  create_library_dialog.cpp  create_library_dialog.h  current_comic_view_helper.cpp  current_comic_view_helper.h  data_base_management.cpp  data_base_management.h  database_helper.cpp  database_helper.h  db_helper.cpp  (+122 more)
YACReaderLibraryServer/: CMakeLists.txt  SETTINGS_README.md  YACReaderLibraryServer.pro  console_ui_library_creator.cpp  console_ui_library_creator.h  headless_config.pri  images.qrc  libraries_updater.cpp  libraries_updater.h  main.cpp  systemctl_service_instructions.txt  systemd_instructions.txt  yacreaderlibraryserver.service  yacreaderlibraryserver_de.ts  yacreaderlibraryserver_es.ts  yacreaderlibraryserver_fr.ts  yacreaderlibraryserver_ko.ts  yacreaderlibraryserver_nl.ts  yacreaderlibraryserver_pt.ts  yacreaderlibraryserver_ru.ts  yacreaderlibraryserver_source.ts  yacreaderlibraryserver_tr.ts  yacreaderlibraryserver_zh_CN.ts  yacreaderlibraryserver_zh_HK.ts  yacreaderlibraryserver_zh_TW.ts
common/: CMakeLists.txt  app_language_utils.h  bookmarks.cpp  bookmarks.h  check_new_version.cpp  check_new_version.h  comic.cpp  comic.h  comic_db.cpp  comic_db.h  comic_flow_widget.cpp  comic_flow_widget.h  concurrent_queue.cpp  concurrent_queue.h  cover_utils.cpp  cover_utils.h  custom_widgets.cpp  custom_widgets.h  exit_check.cpp  exit_check.h  folder.cpp  folder.h  global_info_provider.cpp  global_info_provider.h  http_worker.cpp  http_worker.h  image_decoders.cpp  image_decoders.h  library_item.cpp  library_item.h  onstart_flow_selection_dialog.cpp  onstart_flow_selection_dialog.h  opengl_checker.cpp  opengl_checker.h  pdf_comic.cpp  pdf_comic.h  pdf_comic.mm  pdf_render_size.h  pictureflow.cpp  pictureflow.h  (+17 more)
compressed_archive/: 7z_includes.h  7z_precompiled_header.h  CMakeLists.txt  README_7zip.txt  StdAfx.h  StdAfx.h.cpp  compressed_archive.cpp  compressed_archive.h  extract_callbacks.h  extract_delegate.h  libp7zip.patch  open_callbacks.h  wrapper.pri
custom_widgets/: CMakeLists.txt  custom_widgets.pri  custom_widgets_yacreader.pri  custom_widgets_yacreaderlibrary.pri  help_about_dialog.cpp  help_about_dialog.h  rounded_corners_dialog.cpp  rounded_corners_dialog.h  whats_new_controller.cpp  whats_new_controller.h  whats_new_dialog.cpp  whats_new_dialog.h  yacreader_3d_flow_config_widget.cpp  yacreader_3d_flow_config_widget.h  yacreader_busy_widget.cpp  yacreader_busy_widget.h  yacreader_cover_label.cpp  yacreader_cover_label.h  yacreader_dark_menu.cpp  yacreader_dark_menu.h  yacreader_deleting_progress.cpp  yacreader_deleting_progress.h  yacreader_field_edit.cpp  yacreader_field_edit.h  yacreader_field_plain_text_edit.cpp  yacreader_field_plain_text_edit.h  yacreader_flow.cpp  yacreader_flow.h  yacreader_flow_config_widget.cpp  yacreader_flow_config_widget.h  yacreader_gl_flow_config_widget.cpp  yacreader_gl_flow_config_widget.h  yacreader_library_item_widget.cpp  yacreader_library_item_widget.h  yacreader_library_list_widget.cpp  yacreader_library_list_widget.h  yacreader_macosx_toolbar.h  yacreader_macosx_toolbar.mm  yacreader_options_dialog.cpp  yacreader_options_dialog.h  (+15 more)
shortcuts_management/: CMakeLists.txt  actions_groups_model.cpp  actions_groups_model.h  actions_shortcuts_model.cpp  actions_shortcuts_model.h  edit_shortcut_item_delegate.cpp  edit_shortcut_item_delegate.h  edit_shortcuts_dialog.cpp  edit_shortcuts_dialog.h  shortcuts_dialog.cpp  shortcuts_dialog.h  shortcuts_management.pri  shortcuts_manager.cpp  shortcuts_manager.h
(+588 files in other folders)
